--- a/frontend/freeit/pubspec.yaml
+++ b/frontend/freeit/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  yaml: ^3.1.0
+  flutter_pickers: ^2.1.1
+  loading_overlay: ^0.3.0
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +48,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/classify/subject.yaml
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
