--- a/frontend/freeit/pubspec.yaml
+++ b/frontend/freeit/pubspec.yaml
@@ -1,5 +1,5 @@
 name: freeit
-description: A new Flutter project.
+description: Free IT app,written in dart.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -31,6 +31,9 @@ dependencies:
   yaml: ^3.1.0
   flutter_pickers: ^2.1.1
   loading_overlay: ^0.3.0
+  fluttertoast: ^8.0.6  # toast
+  flutter_markdown: ^0.6.2
+  shared_preferences: ^2.0.5  # 保存信息
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/classify/subject.yaml
+    - assets/test_markdown/README.md
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
