add watermark test page

--- a/frontend/freeit/pubspec.yaml
+++ b/frontend/freeit/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   fluttertoast: ^8.0.6  # toast
   flutter_markdown: ^0.6.2
   shared_preferences: ^2.0.5  # 保存信息
+  disable_screenshots: ^0.2.0
+  after_layout: ^1.1.0
 
 dev_dependencies:
   flutter_test:
