--- a/frontend/freeit/pubspec.yaml
+++ b/frontend/freeit/pubspec.yaml
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -36,6 +37,7 @@ dependencies:
   shared_preferences: ^2.0.5  # 保存信息
   disable_screenshots: ^0.2.0
   after_layout: ^1.1.0
+  flutter_spinkit: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +58,7 @@ flutter:
   assets:
     - assets/classify/subject.yaml
     - assets/test_markdown/README.md
+    - assets/images/icon.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
